fixed the resizing overflow problem

--- a/public/css/mainExpd2.css
+++ b/public/css/mainExpd2.css
@@ -58,9 +58,8 @@ svg {
 }
 
 .catagoryButtons{
-  position: relative;
-  height: 35px;
-  margin: 10px;
+  display:inline;
+  margin-left: 10px;
   background-color: #4CAF50;
   border-radius: 8px;
   color: white;
@@ -68,7 +67,16 @@ svg {
   font-size: 16px;
   cursor: pointer;
   outline:none;
-  float:left;
+  clear: left;
+}
+
+
+#catagoryButtonContainer{
+  display:inline;
+  position: absolute;
+  left:700px;
+  height: 35px;
+  min-width: 700px
 }
 
 .catagoryButtons[value=on]{
@@ -83,10 +91,4 @@ svg {
 
 .catagoryButtons:hover{
   background-color: #3e8e41;
-}
-
-
-div#catagoryButtonContainer{
-    position: absolute;
-    left: 57%;
 }
